[package]
name = "dpbriggs-blog"
version = "0.2.0"
authors = ["David Briggs <dpbriggs@edu.uwaterloo.ca>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
lazy_static = "1.4.0"
select = "0.4.3"
serde = "1.0.102"
serde_derive = "1.0.102"
chrono = { version = "0.4.9", features = ["serde"] }
simple_logger = "1.3.0"
log = "0.4.8"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve"]
