[package]
name = "dpbriggs-blog"
version = "0.3.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
select = "0.6.1"
serde = "1.0.226"
serde_derive = "1.0.226"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "original-uri"] }
tower-http = { version = "0.6.6", features = ["fs", "util", "trace"] }
tera = "1.20.0"
axum-template = { version = "3.0.0", features = ["tera"] }
tokio-util = { version = "0.7.16", features = ["tracing"] }
tracing-subscriber = "0.3.20"
miette = { version = "7.6.0", features = ["fancy"] }
tracing = { version = "0.1.41", features = ["log"] }
tower = "0.5.2"
