[package]
name = "dpbriggs-blog"
version = "0.3.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
select = "0.6.1"
serde = {version = "1.0.226", features = ["derive"]}
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
tera = "1.20.0"
miette = { version = "7.6.0", features = ["fancy"] }
fs_extra = "1.3.0"
clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0.63"
